--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,14 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/flask"
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "app.py"
-    },
-    {
       "src": "/(.*)",
       "dest": "app.py"
     }
-  ],
-  "env": {
-    "PYTHON_VERSION": "3.11"
-  }
+  ]
 }
